[package]
name = "hermit"
version = "0.1.3"
edition = "2024"
license = "MIT"

[[bin]]
name = "hermit"
path = "src/main.rs"

[dependencies]
deno_core = "0.394"
deno_error = "0.7"
libc = "0.2"
tokio = { version = "1", features = ["rt", "sync", "signal", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
